--- a/Frontend/cyoa/src/App.css
+++ b/Frontend/cyoa/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: gray;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
